# hippo-llm-memory

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  CODEX_PROMPTS_M9_READINESS.md  CODING_GUIDELINES.md  CODING_STANDARDS.md  CONTRIBUTING.md  DESIGN.md  EVAL_PLAN.md  EVAL_PROTOCOL.md  LICENSE  MILESTONE_8_PLAN.md  MILESTONE_9_5_PLAN.md  MILESTONE_9_PLAN.md  Makefile  PROJECT_PLAN.md  README.md  REFACTOR.md  REVIEW.md  TASKS.yaml  TEST_GAPS.md  THIRD_PARTY_NOTICES.md  TRACEABILITY.md  pyproject.toml  refactoring_plan.md  tasks.md
.git-hub/: PULL_REQUEST_TEMPLATE.md
.github/: PULL_REQUEST_TEMPLATE.md
ci/: STATUS.md
codex-env/: requirements.txt  setup.sh
configs/: __init__.py  model.yaml  models.yaml  train.yaml
data/: MANIFEST.json  README.md  checksums.txt  episodic_1000_1337.jsonl  episodic_1000_2025.jsonl  episodic_1000_4242.jsonl  episodic_200_1337.jsonl  episodic_200_2025.jsonl  episodic_200_4242.jsonl  episodic_50_1337.jsonl  episodic_50_2025.jsonl  episodic_50_4242.jsonl  episodic_d2_200_4242.jsonl  semantic_1000_1337.jsonl  semantic_1000_2025.jsonl  semantic_1000_4242.jsonl  semantic_200_1337.jsonl  semantic_200_2025.jsonl  semantic_200_4242.jsonl  semantic_50_1337.jsonl  semantic_50_2025.jsonl  semantic_50_4242.jsonl  semantic_h2_clean_1000_1337.jsonl  semantic_h2_clean_1000_2025.jsonl  semantic_h2_clean_200_1337.jsonl  semantic_h2_clean_200_2025.jsonl  semantic_h2_clean_200_4242.jsonl  semantic_h2_clean_50_1337.jsonl  semantic_h2_clean_50_2025.jsonl  semantic_h2_clean_50_4242.jsonl  semantic_h3_contradict_1000_2025.jsonl  semantic_h3_contradict_200_2025.jsonl  semantic_h3_contradict_50_1337.jsonl  spatial_1000_1337.jsonl  spatial_1000_2025.jsonl  spatial_1000_4242.jsonl  spatial_200_1337.jsonl  spatial_200_2025.jsonl  spatial_200_4242.jsonl  spatial_50_1337.jsonl  (+18 more)
docs/: EVAL_PLAN.md  EVAL_PROTOCOL.md  REPORTS.md  TRACE_SPEC.md  api_surface.md  baselines.md  inventory.md
hippo_eval/: baselines.py
hippo_mem/: __init__.py  _faiss.py  utils.py
models/: README.md
reports/: .gitignore  __init__.py  render_baselines.py
research/: SUMMARY.md  experiment-synthesis.md  hippocampal-memory-storage.md  large-language-models.md  lora-fine-tuning-overview.md  validation.md
review/: 2025-09-05_spatial_store_review.md  2025_09_04_TESTS_REVIEW.md  2025_09_04_review_refactoring.md  action-plan-2025-08-19.md  analysis-2025-08-21.md  analysis-hippo-eval-pipeline-n50-seed1337.md  codex_task_pack_eval_pipeline.md  (+13 more)
(+4827 files in other folders)
